...
            android:textAppearance="@style/AppTextAppearance.SettingsBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jagex_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/osrs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_osrs_button"
            style="@style/Widget.OSRSWiki.OutboundLinkButton"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textAppearance="@style/AppTextAppearance.SettingsBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wiki_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wiki_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_wiki_button"
            style="@style/Widget.OSRSWiki.OutboundLinkButton"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textAppearance="@style/AppTextAppearance.SettingsBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/openrs2_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openrs2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_openrs2_button"
            style="@style/Widget.OSRSWiki.OutboundLinkButton"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textAppearance="@style/AppTextAppearance.SettingsBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maplibre_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/maplibre_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_maplibre_button"
            style="@style/Widget.OSRSWiki.OutboundLinkButton"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textAppearance="@style/AppTextAppearance.SettingsBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wikipedia_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wikipedia_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/about_wikipedia_button"
            style="@style/Widget.OSRSWiki.OutboundLinkButton"
            app:layout_constraintEnd_toEndOf="parent"
...
